Just needed to save again

--- a/Frequentist Case Study B/Frequentist Inference Case Study - Part B (2).ipynb
+++ b/Frequentist Case Study B/Frequentist Inference Case Study - Part B (2).ipynb
@@ -474,7 +474,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__A:__  the only function I came across that mentions z-scores was scipy.stats.zmap. which is used to return an array of "
+    "__A:__  the only function I came across that mentions z-scores was scipy.stats.zmap. Which is used to return an array of z-scores, "
    ]
   },
   {
